add vender prefix for css gradient

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -665,6 +665,8 @@ div.right-panel {
     height: 6em;
     line-height: 58px;
     background-color: #FFF;
+    background: -moz-linear-gradient(to bottom, #FDFDFD , rgba(203, 210, 217, 0.3));
+    background: -webkit-linear-gradient(to bottom, #FDFDFD , rgba(203, 210, 217, 0.3));
     background: linear-gradient(to bottom, #FDFDFD , rgba(203, 210, 217, 0.3));
     border-bottom: 1px solid #FBFBFA;
     border-top: 1px solid rgba(203, 210, 217, 0.2);
@@ -795,6 +797,8 @@ div.pull-right {
     color: @linkHover;
   }
   TH {
+    background-image: -moz-linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
+    background-image: -webkit-linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
     background-image: linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
     letter-spacing: 0.1px;
     border-bottom: 1px solid #dad8d8;
@@ -1497,6 +1501,8 @@ div.pull-right {
 }
 .profile-item-container {
   background-color: #EFF5F3;
+  background-image: -moz-linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
+  background-image: -webkit-linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%) ;
   padding: 2em;
   margin: 0.5em auto;
@@ -1933,6 +1939,8 @@ div.noOrg-container {
   width: 100%;
   max-width: 100%;
   border: solid 2px #F1F1F1;
+  background-image: -moz-linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
+  background-image: -webkit-linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
 }
 #createProfileForm[data-account='patient'] #bdGroup {
@@ -2526,6 +2534,8 @@ div.timezone-warning.text-warning {
   text-transform: capitalize
 }
 .gradient {
+  background-image: -moz-linear-gradient(to top right, #FFF, #e1e2e1);
+  background-image: -webkit-linear-gradient(to top right, #FFF, #e1e2e1);
   background-image: linear-gradient(to top right, #FFF, #e1e2e1);
 }
 /** Responsive sizes **/
