--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -740,6 +740,8 @@ div.right-panel {
     height: 6em;
     line-height: 58px;
     background-color: #FFF;
+    background: -moz-linear-gradient(to bottom, #FDFDFD , rgba(203, 210, 217, 0.3));
+    background: -webkit-linear-gradient(to bottom, #FDFDFD , rgba(203, 210, 217, 0.3));
     background: linear-gradient(to bottom, #FDFDFD , rgba(203, 210, 217, 0.3));
     border-bottom: 1px solid #FBFBFA;
     border-top: 1px solid rgba(203, 210, 217, 0.2);
@@ -869,6 +871,8 @@ div.right-panel {
    color: @linkHover;
   }
   TH {
+    background-image: -moz-linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
+    background-image: -webkit-linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
     background-image: linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
     letter-spacing: 0.1px;
     border-bottom: 1px solid #dad8d8;
@@ -1539,8 +1543,8 @@ div.right-panel {
 }
 .profile-item-container {
   background-color: #EFF5F3;
-  /*background-color: rgba(173, 193, 197, 0.16);*/
-  /*background-color: rgba(204, 206, 204, 0.25);*/
+  background-image: -moz-linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
+  background-image: -webkit-linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
   padding: 2em 1em 2.5em 1em;
   margin: 0.5em auto;
@@ -2545,6 +2549,8 @@ div.timezone-warning.text-warning {
   flex: 1 100%;
 }
 .gradient {
+  background-image: -moz-linear-gradient(to top right, #FFF, #e1e2e1);
+  background-image: -webkit-linear-gradient(to top right, #FFF, #e1e2e1);
   background-image: linear-gradient(to top right, #FFF, #e1e2e1);
 }
 .tnth-hide {
