patient reports modal fixes, css fixes

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -339,6 +339,7 @@ select:not([multiple]) {
     transition: max-height .35s;
   }
   /* :checked */
+  label.tab-label.active ~ .tab-content,ß
   input.tab-input:checked ~ .tab-content {
     max-height: 25em;
     margin: 1em auto;
