--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -292,6 +292,7 @@
         <div id="profileEmailErrorMessage" class="text-danger"></div>
     </div>
     <script>$(function () {
+        {% if person and person.has_role("write_only") %}$("#lbPatientRegEmail").addClass("active");{% endif %}
         function getAccessUrl() {
             var url = '';
             tnthAjax.accessUrl( $("#_userId").val(), true, function(data) {
@@ -352,7 +353,7 @@
                     body = '{{ app_text('profileSendEmail reminder email_body', url_for('user.login', _external=True, email=person.email)) | safe }}'.replace(/\(clinic name\)/g, clinicName);
                     subject = '{{ app_text('profileSendEmail reminder email_subject') }}'.replace(/\(clinic name\)/g, clinicName);
                 }
-                if (body != '') {
+                if (body != '' && hasValue(return_url)) {
                     tnthAjax.invite({{person.id}}, {'subject': subject, 'recipients': email, 'body': body}, function(data) {
                         if (!data.error) {
                             $('#profileEmailMessage').html("<strong class='text-success'>{% trans %}" + selectedOption.text() + ' email sent to ' + email + "{%endtrans%}</strong>");
@@ -363,7 +364,7 @@
                             $('#profileEmailMessage').text('{%trans%}Unable to send email.{%endtrans%}');
                         };
                     });
-                };
+                } else  $('#profileEmailMessage').text('{{_("Unable to send email.")}}');
             } else $('#profileEmailMessage').text('{%trans%}You must select a email type.{%endtrans%}');
         });
      });</script>
@@ -390,7 +391,7 @@
         <div id="profileEmailErrorMessage" class="text-danger"></div>
     </div>
     <script>$(function () {
-        $("#lbStaffRegEmail").addClass("active").trigger("click");
+        {% if person and person.has_role("write_only") %}$("#lbStaffRegEmail").addClass("active");{% endif %}
         function getAccessUrl() {
             var url = '';
             tnthAjax.accessUrl( $("#_userId").val(), true, function(data) {
@@ -463,7 +464,7 @@
      });</script>
     {%- endif -%}
 {%- endmacro %}
-{% macro profileCommunications(person, current_user) -%}
+{% macro profileCommunications(person, current_user, invite_email) -%}
     {%- if person and person.has_role(ROLE.PATIENT) -%}
         <div class="row">
             <div class="col-md-12 col-xs-12">
@@ -480,7 +481,7 @@
                         {%- if not config.CUSTOM_PATIENT_DETAIL -%}
                         <div class="tab">
                           <input id="tab-two" name="tabGroup" type="radio" data-validate="false" class="tab-input">
-                          <label for="tab-two" class="tab-label">{{_("Send registration email to patient")}}</label>
+                          <label id="lbPatientRegEmail" for="tab-two" class="tab-label">{{_("Send registration email to patient")}}</label>
                           <div class="tab-content">
                             <div id="registrationEmailContainer">{{profileSendEmail(person, invite_email)}}</div>
                           </div>
@@ -2114,7 +2115,7 @@
         </div>
     {%- endif %}
 
-    {{profileCommunications(person, current_user)}}
+    {{profileCommunications(person, current_user, invite_email)}}
 
     <div class="row">
         <div class="col-md-12 col-xs-12">
