--- a/portal/gil/templates/gil/base.html
+++ b/portal/gil/templates/gil/base.html
@@ -89,7 +89,7 @@
               <svg width="32" height="32">
                 <use xlink:href="#ST-Icon-Nav"></use>
               </svg>{{_("Symptom Tracker")}}</a></li>
-          <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--exercisediet"><a href="{{url_for('exercise_diet.index')}}">{{_("Exercise and Diet")}}</a></li>
+          <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--exercisediet"><a href="{{url_for('gil.exercise_and_diet')}}">{{_("Exercise and Diet")}}</a></li>
           <li class="side-nav-items__item side-nav-items__item--has-icon side-nav-items__item--accentuated side-nav-items__item--livedexperience"><a href="{{url_for('gil.lived_experience')}}">{{_("Lived Experience")}}</a></li>
           <li class="side-nav-items__item side-nav-items__item--whatisprostatecancer"><a href="{{url_for('gil.prostate_cancer_facts')}}">{{_("Prostate Cancer Facts")}}</a></li>
           <li class="side-nav-items__item side-nav-items__item--contact"><a href="{{url_for('gil.contact')}}">{{_("Contact")}}</a></li>
