add action and last updated columns to consent history, EPROMS only

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -2965,6 +2965,13 @@ div.timezone-warning.text-warning {
       }
     }
   }
+
+  #profileConsentHistory {
+    .modal-dialog {
+      width: 65%;
+      max-width: 100%;
+    }
+  }
 }
 @media (min-width: 1200px) {
   #fullSizeContainer {
