change 'other' to 'not sure' on contact page

--- a/portal/gil/templates/gil/contact.html
+++ b/portal/gil/templates/gil/contact.html
@@ -59,7 +59,7 @@
                       {% for type in types %}
                       <option value="{{ type[1] }}">{{ type[0] }}</option>
                       {% endfor %}
-                      <option value="{{ config.CONTACT_SENDTO_EMAIL }}" selected>{{_("Other")}}</option>
+                      <option value="{{ config.CONTACT_SENDTO_EMAIL }}" selected>{{_("Not sure")}}</option>
                     </select>
                   </div>
                 </div>
