--- a/portal/eproms/templates/eproms/contact.html
+++ b/portal/eproms/templates/eproms/contact.html
@@ -32,7 +32,7 @@
           {% for type in types %}
           <option value="{{ type[1] }}">{{ type[0] }}</option>
           {% endfor %}
-          <option value="{{ config.CONTACT_SENDTO_EMAIL }}" selected>{{_("Other")}}</option>
+          <option value="{{ config.CONTACT_SENDTO_EMAIL }}" selected>{{_("Not sure")}}</option>
         </select>
       </div>
       {% endif %}
