preserving column selection(s) on patients list

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -870,6 +870,7 @@ div.right-panel {
   tr[data-uniqueid]:hover {
    background-color: #ececea;
    color: @linkHover;
+   cursor: pointer;
   }
   TH {
     background-image: -moz-linear-gradient(to bottom, #FFF, rgba(232, 233, 234, 0.9));
