add saving column selection(s) back

--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -202,6 +202,8 @@ $(document).ready(function() {
     $("#patientReportModal").modal({"show": false});
   {% endif %}
 
+  AT.setColumnSelections();
+
   AT.rowLinkEvent(); 
 
 });
