--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -218,7 +218,7 @@
         </div>
       </div>
       <div id="termsCheckbox" class="hidden-print">
-         <h4><a data-toggle="modal" data-target="#websiteDeclarationFormModal" class="link form-link">View/print website declaration form</a></h4>
+         <h4><a data-toggle="modal" data-target="#websiteDeclarationFormModal" class="link form-link">{{_("View/print website declaration form")}}</a></h4>
          <br/>
         <label class="custom-tou" data-agree="false" data-type="terms" data-tou-type="subject website consent,stored website consent form" data-core-data-type="subject_website_consent,stored_website_consent_form"  data-url="{{terms['url'] if terms}}">
           <div class="edit-view">
