add treatments/procedures section in account creation/profile for eproms crv

--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -1950,6 +1950,9 @@ div.noOrg-container {
   label.clinics-section-label {
     margin-bottom: 0;
   }
+  #profileProceduresWrapper {
+    display: none;
+  }
 }
 .create-account-container {
   padding: 2em;
@@ -2493,6 +2496,15 @@ div.org-container {
     font-size: @btnSize;
     height: 2.35em;
     padding: 0 1em;
+  }
+  .confirm-delete,
+  .data-delete {
+    font-size: 0.85em;
+    padding: 0.5em 0.8em;
+    color: #777;
+    border: 1px solid #bdb9b9;
+    position: relative;
+    top: -0.3em;
   }
   #pastTreatmentsContainer,
   #eventListLoad {
