add curlycues, styling fixes, add camel humps

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1912,11 +1912,6 @@ input.clinic {
       margin-top: 2em;
     }
   }
-
-  .profile-item-container {
-    border: 1px solid #dcdcdc;
-  }
-
   .profile-item-title {
     color: #777777;
     font-weight: normal;
@@ -1935,6 +1930,10 @@ input.clinic {
   #tnthproc-submit {
     height: auto;
   }
+}
+
+#profileProceduresWrapper.profile-item-container {
+    border: 1px solid #dcdcdc;
 }
 
 #profileProceduresWrapper[data-top-org-name='IRONMAN'] {
