--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -62,7 +62,12 @@
 {% block document_ready %}
     var orgList = {% if org_list %} {{org_list | safe}} {% else %} false {% endif %};
     //instantiation of account creation object, note, staff role is passed in
-    var aco = new AccountCreationObj([{'name': '{{ROLE.STAFF}}'}, {'name': '{{ROLE.WRITE_ONLY}}'}]);
+    var aco = new AccountCreationObj(
+    [{'name': '{{ROLE.STAFF}}'}, {'name': '{{ROLE.WRITE_ONLY}}'},],
+    {'i18next': i18next,
+    'tnthAjax': tnthAjax,
+    'SYSTEM_IDENTIFIER_ENUM': SYSTEM_IDENTIFIER_ENUM
+    });
     $(function () {
         /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
         aco.getOrgs(aco.populateStaffOrgs);
