--- a/portal/templates/staff_profile_create.html
+++ b/portal/templates/staff_profile_create.html
@@ -66,7 +66,9 @@
     [{'name': '{{ROLE.STAFF}}'}, {'name': '{{ROLE.WRITE_ONLY}}'},],
     {'i18next': i18next,
     'tnthAjax': tnthAjax,
-    'SYSTEM_IDENTIFIER_ENUM': SYSTEM_IDENTIFIER_ENUM
+    'SYSTEM_IDENTIFIER_ENUM': SYSTEM_IDENTIFIER_ENUM,
+    'OrgTool': OT,
+    'orgList': orgList
     });
     $(function () {
         /*** need to run this instead of the one function from main.js because we don't want to pre-check any org here ***/
